Version 0.6.1 (development):
	added QR and random_unitary methods
	fixed bug in norm() under sage
	added Cartan decomposition as experimental module

Version 0.6 (2011-05-21):
	implement rich comparison rather than cmp (fixes HilbertSpace() == None)
	check ininstance in HilbertArray.__eq__
	HilbertArray.O method (density operator)
	convert symbolic to complex for svd()
	entropy() method (symbolic for Sage)
	eigvals() method (symbolic for Sage)
	eig() gives symbolic for sage
	n() method for sage
	simplify()/simplify_full() methods

Version 0.5.1 (2011-04-03):
	cphase was erroneously called cnot
	added correct cnot gate

Version 0.5 (2011-03-28):
	fixed base_field equality check
	fixed Hadamard gate for Sage's SR
	full/partial trace function
	eigenvectors function
	diagonal matrix factory function
	random_array gives complex values
	0-d arrays always have int size (not 1.0)
	matrix pow operator
	apply_map function

Version 0.4 (2011-03-13):
	don't test for Sage on every base_field_lookup call
	custom matrix norm that works on Sage's SR
	more package metadata

Version 0.3 (2011-03-11):
	Python type arrays can use Sage rendering in Sage
	Sage support without mixins
	renamed some modules (no API changes)
	unary negation
	Pauli states and some circuit operators
	input data is cast for Sage base fields

Version 0.2 (2011-03-10):
	fix: tensordot returns scalar instead of 0-d Hilbert array
	fix: catch usage of array slices (which are not allowed)

Version 0.1 (2011-03-08):
	initial version